[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pki-certificate-system"
version = "0.1.0"
description = "Educational PKI certificate system using RSA, AES, X.509 certificates, CSRs, and CRLs."
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
